<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:id="@+id/linearProfileAddre"
        style="@style/groupStylewhite_A700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearRowaddresstwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_10pxh"
            android:layout_marginEnd="@dimen/_1pxh"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAddressTwo"
                style="@style/txtPoppinsmedium14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_total_copies" />

            <TextView
                android:id="@+id/txtTotalcopycount"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_10"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearRowaddresstwoOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_marginEnd="@dimen/_1pxh"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAddressTwoOne"
                style="@style/txtPoppinsmedium14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/msg_available_copie" />

            <TextView
                android:id="@+id/txtavailableCopies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_04"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearRowaddresstwoTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_marginEnd="@dimen/_1pxh"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAddressTwoTwo"
                style="@style/txtPoppinsmedium14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_reserved_copies" />

            <TextView
                android:id="@+id/txtreservedCopies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_03"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearRowaddresstwoThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_marginEnd="@dimen/_1pxh"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAddressTwoThree"
                style="@style/txtPoppinsmedium14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_issued_copies" />

            <TextView
                android:id="@+id/txtIssuedCopies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:textAlignment="center"
                tools:text="3" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtHomeaddress"
            style="@style/txtPoppinsmedium14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_6pxv"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/msg_issued_copies_d" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/copyrecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5pxh"
            tools:itemCount="3"
            tools:listitem="@layout/copyitem">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</layout>
