<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintSignin"
        style="@style/groupStyleblack_900"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageTopBar"
            android:layout_width="@dimen/_42pxh"
            android:layout_height="@dimen/_42pxh"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="@dimen/_293pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            style="@style/btnSolidRounded"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_40pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:ellipsize="end"
            android:gravity="center"

            android:singleLine="true"
            android:text="@string/lbl_submit"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAlbartainstain"
            tools:text="@string/lbl_submit" />

        <TextView
            android:id="@+id/txtForgetPassword"
            style="@style/txtPoppinssemibold24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/_24pxh"
            android:ellipsize="end"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/msg_forget_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageTopBar"
            tools:text="@string/msg_forget_password" />

        <TextView
            android:id="@+id/txtRecoverPasswor"
            style="@style/txtPoppinsregular14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:gravity="start"
            android:text="@string/msg_recover_passwor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtForgetPassword"
            tools:text="@string/msg_recover_passwor" />

        <EditText
            android:id="@+id/etAlbartainstain"
            style="@style/etSolidRoundedOutline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_40pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:background="@drawable/rectangle_bg_black_900_border_blue_a400_radius_16"
            android:ellipsize="end"
            android:hint="@string/msg_albart_ainstain"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_22pxv"
            android:paddingBottom="@dimen/_22pxv"
            android:singleLine="true"
            android:textColorHint="@color/white_A700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRecoverPasswor" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
